--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,11 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Manrope", sans-serif;
+}
+
+p {
+  font-family: "Libre Franklin", sans-serif;
 }
 
 html.dark {
