chore: tweak background 'white' color

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,6 +13,10 @@ p {
   font-family: "Libre Franklin", sans-serif;
 }
 
+html {
+  background: #F5FFFD;
+}
+
 html.dark {
   background: #16242f;
 }
