--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,6 @@
 @import './markdown.css';
+@import './fonts.css';
+
 
 html,
 body,
@@ -6,11 +8,11 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Manrope", sans-serif;
+  font-family: "Thicccboi", sans-serif;
 }
 
 p {
-  font-family: "Libre Franklin", sans-serif;
+  font-family: "Thicccboi", sans-serif;
 }
 
 html {
