feat: highlight download cv button

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -62,6 +62,7 @@ html.dark {
   --primary-300: #00FF90;
   --primary-500: #58FEB6;
   --primary-700: #24BEA2;
+  --primary-900: #08987E;
   --secondary: #4D8DFC;
   --background-100: #F8F9FC;
   --background-900: #15212c;
